# hiob-contracts

./: README.md  pyproject.toml
hiob_contracts/: __init__.py  ares_script_input.py  ares_script_revision_v1.py  audio_clip.py  beat_personas.py  beat_plan.py  composition_snapshot.py  cut_contract.py  decision_callable.py  defect_signal.py  defect_signal_provider.py  dossier_contract.py  edge_target_inputs.py  edit_decision_list.py  element_locks.py  envelope_validation.py  execution_backend.py  feedback_signal.py  gate.py  heroine.py  identity_qa_fields.py  janus_brief.py  klingvideo.py  locale_pack.py  media_artifact.py  overnight_first_customer_v1.py  overnight_first_customer_v2.py  parzifal_master_sheet.py  parzifal_target_input.py  planet_envelopes.py  planet_io.py  provenance.py  reel_kpi_provider.py  reel_metric.py  script_contract.py  service_jwt.py  shot_list.py  six_realm.py  strategy_approval_v2.py  target_sheet.py  (+2 more)
hiob_contracts/factory/: __init__.py  approval.py  degradation.py  digest.py  karma_edge.py  (+7 more)
tests/: __init__.py  test_ares_script_revision_v1.py  test_beat_personas.py  test_beat_scene_direction.py  test_bf1_1_identity_qa_fields.py  test_bf3_1_provenance.py  test_bfa2_lock_registry.py  test_contracts.py  test_decision_callable.py  test_defect_signal.py  test_edge_target_contracts.py  test_element_locks.py  test_envelope_validation.py  test_factory_kernel.py  test_overnight_first_customer_v1.py  test_overnight_first_customer_v2.py  test_parzifal_master_sheet.py  test_planet_output_builder.py  test_qa_fixes.py  test_render_node.py  test_service_jwt.py  test_shot_list_intent.py  test_stage_receipt_builder.py  test_strategy_approval_v2.py  test_target_sheet.py  test_timeline_v2_payload.py  test_visual_materialization.py
ts/: package-lock.json  package.json
(+28 files in other folders)
