[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiob-contracts"
version = "0.1.0"
description = "HIOB н–үм„ұк°„ нғҖмһ… кі„м•Ҫ вҖ” JanusBriefвҶ’BeatPlanвҶ’{MediaArtifact,AudioClip}вҶ’EditDecisionListвҶ’CompositionSnapshotвҶ’ReelMetric. н–үм„ұмқҖ нҢҢмқјмқҙ м•„лӢҲлқј мқҙ кі„м•ҪмңјлЎңл§Ң нҳ‘м—…н•ңлӢӨ."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hiob_contracts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
