[project]
name = "hiob-contracts"
version = "0.1.0"
description = "HIOB н–үм„ұк°„ нғҖмһ… кі„м•Ҫ вҖ” JanusBriefвҶ’BeatPlanвҶ’{MediaArtifact,AudioClip}вҶ’CompositionSnapshotвҶ’ReelMetric. н–үм„ұмқҖ нҢҢмқјмқҙ м•„лӢҲлқј мқҙ кі„м•ҪмңјлЎңл§Ң нҳ‘м—…н•ңлӢӨ. (EditDecisionList SUNSET D-66)"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hiob_contracts*"]
